# lubyk

./: .gitignore  .gitmodules  12_sig.lua  Autoload.html  BUGS.txt  CMakeLists.txt  CMakeLubyk.txt  CNAME  COPYRIGHT  CREDITS  DEVELOPERS  IDEAS.txt  INSTALL  LICENSE  LiveCoding.lua  LiveMusic.lua  Makefile  README  README.rdoc  README_LINUX  RtMidi.bundle  STYLE.txt  SendReceive.lua  SimpleShader.html  TODO.txt  _prototype.html  _prototype.lk.Metro.html  _prototype.lk.Param.html  _prototype.lk.Print.html  _prototype.lk.html  assets.html  assets.project.doc.LiveFoo.html  assets.project.doc.html  assets.project.html  assets.project.scripts.bind.html  assets.project.scripts.build.html  assets.project.scripts.doc.html  assets.project.scripts.html  assets.project.test.Foo_test.html  assets.project.test.all.html  (+145 more)
Mimas/: CMakeLists.txt
Mimas/Resources/: mimas_app.lua
Mimas/src/macosx/: main.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  eigen.graffle  math.tex  points.graffle  setup.tex
doc/prototypes/: blas.c  boost_ptr.cpp  cocoa_gl_window.m  concepts.textile  data_accessor.cpp  dub_cast.cpp  embed.c  embed_loader.rb  exceptions.cpp  explicit.cpp  fork.c  gl_lights.c  gl_simple.c  inlet.lua  load.cpp  load_test.cpp  matrix.c  new_class.cpp  opencv_cam.cpp  posix_getsockname.cpp  property.lua  sizeof.cpp  spawn.lua  std_list.cpp  sub_ptr.cpp  template.cpp  test  test.sqlite3  thread.c  threads.lua  trigger.cpp  union.cpp  variable_equals_class.rl  vector.cpp  virtual.cpp  webdav.lua  worker.lua
doc/prototypes/OpenGL3/: CMakeLists.txt  core_profile_attributes.mm  test_ogl_core_context.cpp
doc/prototypes/ideas2/: main.lua  proto.lua
doc/prototypes/ideas3/: Node.lua  main.lua  proto.lua  set1.lua  set1_as_class.lua
doc/prototypes/local_dir/: a.lua  test.lua
doc/prototypes/messages/: recv.lua  send.lua
doc/prototypes/sched/: main.lua
doc/prototypes/system/: getaddrinfo.c
modules/: CMakeLists.txt  CMakeSub.txt  bind.rb  foo.rb  qtbug.tgz
modules/bit/lib/: bit.lua
modules/bit/test/: bit_test.lua
modules/core/: CMakeLists.txt  bind.lua
modules/core/src/: CMakeLists.txt
modules/crypto/: CMakeLists.txt
modules/crypto/test/: crypto_test.lua
modules/cv/lua/: cv.lua
modules/cv/sub/: CMake.txt  CMakeLists.txt
modules/glut/: CMakeLists.txt
modules/lk/: CMakeLists.txt  bind.lua  foo.lua  makedoc.lua  stem.lua
modules/lua/: CMakeLists.txt  luagdb.txt
modules/lubyk/: README
modules/mdns/: CMakeLists.txt  bind.lua
modules/mimas/: BUILD_QT
modules/msgpack/: README.txt
modules/test/: Autoload_test.lua  CMakeLists.txt
modules/wii/: CMakeLists.txt  TODO.txt
modules/zmq/: CMakeLists.txt  bind.lua
oscit/: CMakeLists.txt  DEVELOPERS  LICENSE  README  TODO.textile  alias.h  call.h  conf.h  globals.cpp  makefile  object.cpp  object.h  old_matrix_value.h  receive.cpp  receive.h  root.cpp  root.h  send.cpp  send.h  smart_ptr.h  thash.h  tsmart_ptr.h  value.h  values.h  zeroconf.cpp  zeroconf.h
oscit/doc/: observer.graffle  proxy_factory.graffle
oscit/examples/: beatbox.cpp  beatbox.json  beatbox.xml  receive.cpp  send.cpp
oscit/meta_methods/: info_meta_method.h  type_meta_method.h
oscit/off/: hash_value.cpp  old_hash_value.h  string_value.h  value.h
oscit/opencv/: COPYING  cv.hpp  cvaux.hpp  cxalloc.cpp  cxarithm.cpp  cxcore.h  cxsystem.cpp  highgui.h  ml.h
oscit/oscit/: alias.h  base_command.h  base_object.h  call.h  command.h  conf.h  error.h  error_meta_method.h  error_value.h  hash.h  hash_value.h  info_meta_method.h  list.h  list_value.h  matrix.h  matrix_value.h  method.h  mutex.h  object.h  osc_command.h  osc_remote_object.h  oscit.h  receive.h  reference_counted.h  root.h  send.h  string.h  string_value.h  thash.h  thread.h  tsmart_ptr.h  type_meta_method.h  typed.h  url.h  value.h  value_types.h  values.h  zeroconf.h
oscit/oscpack/: CMakeLists.txt
oscit/src/: base_command.cpp  base_object.cpp  callback.cpp  callback_list.cpp  command.cpp  file.cpp  globals.cpp  hash_file_method.cpp  list.cpp  location.cpp  mapper.cpp  mapper.rl  matrix.cpp  midi_message.cpp  object.cpp  object_proxy.cpp  osc_command.cpp  osc_map_command.cpp  osc_root_proxy.cpp  proxy_factory.cpp  receive.cpp  root.cpp  root_proxy.cpp  script.cpp  send.cpp  thread.cpp  time_ref.cpp  url.cpp  url.rl  value.cpp  value.rl  zeroconf.cpp  zeroconf_browser.cpp  zeroconf_browser_common.cpp  zeroconf_registration.cpp
oscit/test/: alias_test.h  any_value_test.h  base_command_test.h  base_object_test.h  call_test.h  callback_test.h  command_test.h  empty_value_test.h  error_value_test.h  file_method_test.h  file_test.h  hash_file_method_test.h  hash_test.h  hash_value_test.h  info_meta_method_test.h  list_meta_method_test.h  list_value_test.h  list_with_type_meta_method_test.h  location_test.h  mapper_test.h  matrix_value_test.h  method_test.h  midi_test.h  midi_value_test.h  mutex_test.h  nil_value_test.h  object_proxy_test.h  object_test.h  observer_test.h  osc_command_test.h  osc_map_command_test.h  osc_proxy_test.h  proxy_factory_test.h  real_value_test.h  receive_test.h  reply_for_proxy.h  root_proxy_test.h  root_test.h  scale_real_test.h  script_test.h  (+16 more)
oscit/values/: bang_value.h  error.h  error_value.h  hash_value.cpp  hash_value.h  list.h  list_value.h  matrix.h  matrix_value.h  midi_value.h  number_value.h  old_hash_value.h  real_value.h  string_value.h  value.cpp  value.h  value.rl
rubyk/: CMakeLists.txt  README  makefile
rubyk/doc/: Doxyfile  eigen.graffle  points2.graffle
rubyk/misc/: cpplint.py
rubyk/om/: om.rk
rubyk/src/: main.cpp
rubyk/test/: aaa_setup_test.h  alias_test.h  bang_test.h  buffer_test.h  char_matrix_test.h  command_test.h  dictionary_test.h  error_test.h  event_test.h  group_test.h  hash_test.h  lua_script_test.h  map_real_test.h  mapper_test.h  matrix_test.h  method_test.h  node_test.h  number_test.h  object_test.h  ordered_list_test.h  osc_test.h  params_test.h  planet_test.h  script_test.h  signal_test.h  slot_test.h  string_test.h  test_helper.h  thash_test.h  tmatrix_test.h  value_test.h  value_test_helper.h  worker_test.h
(+2406 files in other folders)
